// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Features default 1`] = `
.c2 {
  border: 1px solid #ffffff;
  border-radius: 100%;
  display: inline-block;
  height: 32px;
  line-height: 32px;
  text-align: center;
  width: 32px;
}

.c1 {
  color: #ffffff;
}

.c1 > p {
  border-top: 2px solid #868d95;
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 16px;
  padding-top: 16px;
}

.c0 {
  margin: 0 auto;
  overflow: auto;
}

@media (max-width:575px) {
  .c0 > div {
    margin-left: auto;
    margin-right: auto;
    width: 296px;
  }

  .c0 > div:nth-last-child(n + 2) {
    margin-bottom: 64px;
  }
}

@media (min-width:576px) {
  .c0 > div {
    float: left;
  }

  .c0 > div:nth-last-child(n + 3) {
    margin-bottom: 64px;
  }
}

@media (max-width:767px) {
  .c0 > div p {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (min-width:576px) and (max-width:767px) {
  .c0 {
    max-width: 560px;
  }

  .c0 > div {
    width: 264px;
  }

  .c0 > div:nth-child(odd) {
    margin-right: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 656px;
  }

  .c0 > div {
    width: 296px;
  }

  .c0 > div:nth-child(odd) {
    margin-right: 64px;
  }

  .c0 > div p {
    font-size: 20px;
    line-height: 24px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000000",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        1
      </span>
      <p>
        RecordRig is your dedicated gameplay recording PC.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        2
      </span>
      <p>
        Hook it up to your Xbox, PS4 or even your gaming PC.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        3
      </span>
      <p>
        Capture your gameplay videos in immersive 4K HDR quality.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        4
      </span>
      <p>
        Stream directly to YouTube and Twitch, or save for later.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer default 1`] = `
.c3 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > img {
  height: 16px;
  margin-left: 8px;
  width: 19px;
}

.c3 > span {
  vertical-align: top;
}

.c4 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > img {
  height: 16px;
  margin-left: 8px;
  width: 16px;
}

.c4 > span {
  vertical-align: top;
}

.c2 {
  height: 100%;
  width: 100%;
}

.c2 > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 {
  margin-bottom: 64px;
}

@media (max-width:767px) {
  .c7 {
    margin-left: 40px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 20px;
    line-height: 32px;
    margin-left: 82px;
  }
}

@media (max-width:767px) {
  .c6 > img {
    height: 32px;
    width: 123px;
  }
}

@media (min-width:768px) {
  .c6 > img {
    height: 64px;
    width: 246px;
  }
}

@media (max-width:767px) {
  .c1 {
    margin-left: 40px;
  }
}

@media (min-width:768px) {
  .c1 {
    float: right;
    margin-left: 8px;
    width: 50%;
  }
}

@media (max-width:767px) {
  .c5 {
    margin-top: 64px;
  }
}

@media (min-width:768px) {
  .c5 {
    float: left;
    margin-top: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <nav
      className="c2"
    >
      <ul>
        <li>
          <a
            className="c3"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Home
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c3"
            href="/shop"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Shop
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c4"
            href="https://twitter.com/RigRecord"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Twitter
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c4"
            href="https://www.reddit.com/r/RecordRig/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Reddit
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <img
        alt=""
        src="/static/recordrig-logo.png"
      />
    </div>
    <p
      className="c7"
    >
      Industrieweg 46
      <br />
      6541 TW Nijmegen
      <br />
      The Netherlands
    </p>
  </div>
</div>
`;

exports[`Storyshots MainMenu default 1`] = `
.c1 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > img {
  height: 16px;
  margin-left: 8px;
  width: 19px;
}

.c1 > span {
  vertical-align: top;
}

.c2 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > img {
  height: 16px;
  margin-left: 8px;
  width: 16px;
}

.c2 > span {
  vertical-align: top;
}

.c0 {
  height: 100%;
  width: 100%;
}

.c0 > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Home
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c1"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Shop
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="https://twitter.com/RigRecord"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Twitter
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="https://www.reddit.com/r/RecordRig/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Reddit
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar default 1`] = `
.c1 {
  display: block;
  height: 32px;
  margin-bottom: 12px;
  margin-top: 12px;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > img {
  height: 32px;
  width: 123px;
}

.c2 {
  border: 1px solid #0062ff;
  color: #0062ff;
  display: block;
  font-size: 16px;
  height: 16px;
  line-height: 16px;
  padding-left: 19px;
  padding-right: 19px;
  padding-bottom: 13px;
  padding-top: 11px;
  margin-bottom: 11px;
  margin-top: 11px;
  margin-right: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 22px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  position: relative;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 12px;
  outline: 0;
}

.c3 > img {
  height: 22px;
  margin-right: 8px;
  width: 26px;
}

.c3 > span {
  vertical-align: top;
}

.c4 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 20px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-top: 12px;
  outline: 0;
}

.c4 > img {
  height: 20px;
  margin-right: 8px;
  width: 24px;
}

.c4 > span {
  vertical-align: top;
}

.c0 {
  background-color: #fff;
  height: 64px;
  width: 100%;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 > ul > li:first-child {
  margin-right: auto;
}

@media (max-width:767px) {
  .c1 {
    overflow: hidden;
    margin-left: 4px;
    width: 32px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-left: 8px;
  }
}

@media (max-width:767px) {
  .c3 {
    overflow: hidden;
    width: 42px;
  }

  .c3 > span {
    visibility: hidden;
  }
}

@media (max-width:767px) {
  .c4 {
    overflow: hidden;
    margin-right: 4px;
    width: 40px;
  }

  .c4 > span {
    visibility: hidden;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-right: 8px;
  }
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="c3"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
      </button>
    </li>
    <li>
      <button
        className="c4"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar items in bag 1`] = `
.c1 {
  display: block;
  height: 32px;
  margin-bottom: 12px;
  margin-top: 12px;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > img {
  height: 32px;
  width: 123px;
}

.c2 {
  border: 1px solid #0062ff;
  color: #0062ff;
  display: block;
  font-size: 16px;
  height: 16px;
  line-height: 16px;
  padding-left: 19px;
  padding-right: 19px;
  padding-bottom: 13px;
  padding-top: 11px;
  margin-bottom: 11px;
  margin-top: 11px;
  margin-right: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background-color: #ff4e28;
  border-radius: 100%;
  color: #fff;
  height: 16px;
  font-size: 12px;
  font-weight: bold;
  left: 22px;
  line-height: 16px;
  position: absolute;
  top: 20px;
  width: 16px;
}

.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 22px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  position: relative;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 12px;
  outline: 0;
}

.c3 > img {
  height: 22px;
  margin-right: 8px;
  width: 26px;
}

.c3 > span {
  vertical-align: top;
}

.c5 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 20px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-top: 12px;
  outline: 0;
}

.c5 > img {
  height: 20px;
  margin-right: 8px;
  width: 24px;
}

.c5 > span {
  vertical-align: top;
}

.c0 {
  background-color: #fff;
  height: 64px;
  width: 100%;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 > ul > li:first-child {
  margin-right: auto;
}

@media (max-width:767px) {
  .c1 {
    overflow: hidden;
    margin-left: 4px;
    width: 32px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-left: 8px;
  }
}

@media (max-width:767px) {
  .c3 {
    overflow: hidden;
    width: 42px;
  }

  .c3 > span {
    visibility: hidden;
  }
}

@media (max-width:767px) {
  .c5 {
    overflow: hidden;
    margin-right: 4px;
    width: 40px;
  }

  .c5 > span {
    visibility: hidden;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-right: 8px;
  }
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="c3"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
        <span
          className="c4"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        className="c5"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots OptimizedImage custom node 1`] = `
Array [
  <p>
    Scroll down for pictures.
  </p>,
  .c2 > img {
  vertical-align: "bottom";
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
    style={
      Object {
        "maxWidth": "600px",
        "paddingTop": "3000px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <img
            alt=""
            src="/static/god_of_war_compare_hdr_on_lowres.jpg"
          />
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="lazyload-placeholder"
          style={
            Object {
              "height": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots OptimizedImage default 1`] = `
Array [
  <p>
    Scroll down for pictures.
  </p>,
  .c2 > img {
  vertical-align: "bottom";
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
    style={
      Object {
        "maxWidth": "600px",
        "paddingTop": "3000px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_white_lowres.jpg"
          />
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="lazyload-placeholder"
          style={
            Object {
              "height": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots OptimizedVideo default 1`] = `
.c0 {
  cursor: pointer;
  width: 100%;
}

.c0 .video-react .video-react-control:before,
.c0 .video-react .video-react-big-play-button:before {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c0 .video-react .video-react-control:before,
.c0 .video-react .video-react-big-play-button:before {
  text-align: center;
}

.c0 .video-react-icon,
.c0 .video-react .video-react-closed-caption,
.c0 .video-react .video-react-bezel .video-react-bezel-icon,
.c0 .video-react .video-react-volume-level,
.c0 .video-react .video-react-mute-control,
.c0 .video-react .video-react-volume-menu-button,
.c0 .video-react .video-react-play-control,
.c0 .video-react .video-react-play-progress,
.c0 .video-react .video-react-big-play-button {
  font-family: "video-react" !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 .video-react-icon-play-arrow:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-play:before,
.c0 .video-react .video-react-play-control:before,
.c0 .video-react .video-react-big-play-button:before {
  content: "";
}

.c0 .video-react-icon-play-circle-filled:before {
  content: "";
}

.c0 .video-react-icon-play-circle-outline:before {
  content: "";
}

.c0 .video-react-icon-pause:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-pause:before,
.c0 .video-react .video-react-play-control.video-react-playing:before {
  content: "";
}

.c0 .video-react-icon-pause-circle-filled:before {
  content: "";
}

.c0 .video-react-icon-pause-circle-outline:before {
  content: "";
}

.c0 .video-react-icon-stop:before {
  content: "";
}

.c0 .video-react-icon-fast-rewind:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-fast-rewind:before {
  content: "";
}

.c0 .video-react-icon-fast-forward:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-fast-forward:before {
  content: "";
}

.c0 .video-react-icon-skip-previous:before {
  content: "";
}

.c0 .video-react-icon-skip-next:before {
  content: "";
}

.c0 .video-react-icon-replay-5:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-replay-5:before {
  content: "";
}

.c0 .video-react-icon-replay-10:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-replay-10:before {
  content: "";
}

.c0 .video-react-icon-replay-30:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-replay-30:before {
  content: "";
}

.c0 .video-react-icon-forward-5:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-forward-5:before {
  content: "";
}

.c0 .video-react-icon-forward-10:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-forward-10:before {
  content: "";
}

.c0 .video-react-icon-forward-30:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-forward-30:before {
  content: "";
}

.c0 .video-react-icon-volume-off:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-volume-off:before,
.c0 .video-react .video-react-mute-control.video-react-vol-muted:before,
.c0 .video-react .video-react-volume-menu-button.video-react-vol-muted:before {
  content: "";
}

.c0 .video-react-icon-volume-mute:before,
.c0 .video-react .video-react-mute-control.video-react-vol-0:before,
.c0 .video-react .video-react-volume-menu-button.video-react-vol-0:before {
  content: "";
}

.c0 .video-react-icon-volume-down:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-volume-down:before,
.c0 .video-react .video-react-mute-control.video-react-vol-2:before,
.c0 .video-react .video-react-volume-menu-button.video-react-vol-2:before,
.c0 .video-react .video-react-mute-control.video-react-vol-1:before,
.c0 .video-react .video-react-volume-menu-button.video-react-vol-1:before {
  content: "";
}

.c0 .video-react-icon-volume-up:before,
.c0 .video-react .video-react-bezel .video-react-bezel-icon-volume-up:before,
.c0 .video-react .video-react-mute-control:before,
.c0 .video-react .video-react-volume-menu-button:before {
  content: "";
}

.c0 .video-react-icon-fullscreen:before {
  content: "";
}

.c0 .video-react-icon-fullscreen-exit:before {
  content: "";
}

.c0 .video-react-icon-closed-caption:before,
.c0 .video-react .video-react-closed-caption:before {
  content: "";
}

.c0 .video-react-icon-hd:before {
  content: "";
}

.c0 .video-react-icon-settings:before {
  content: "";
}

.c0 .video-react-icon-share:before {
  content: "";
}

.c0 .video-react-icon-info:before {
  content: "";
}

.c0 .video-react-icon-info-outline:before {
  content: "";
}

.c0 .video-react-icon-close:before {
  content: "";
}

.c0 .video-react-icon-circle:before,
.c0 .video-react .video-react-volume-level:before,
.c0 .video-react .video-react-play-progress:before {
  content: "";
}

.c0 .video-react-icon-circle-outline:before {
  content: "";
}

.c0 .video-react-icon-circle-inner-circle:before {
  content: "";
}

.c0 .video-react {
  display: block;
  vertical-align: top;
  box-sizing: border-box;
  color: #fff;
  background-color: #000;
  position: relative;
  font-size: 10px;
  line-height: 1;
  font-family: serif,Times,"Times New Roman";
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .video-react:-moz-full-screen {
  position: absolute;
}

.c0 .video-react:-webkit-full-screen {
  width: 100% !important;
  height: 100% !important;
}

.c0 .video-react *,
.c0 .video-react *:before,
.c0 .video-react *:after {
  box-sizing: inherit;
}

.c0 .video-react ul {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  list-style-position: outside;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c0 .video-react.video-react-fluid,
.c0 .video-react.video-react-16-9,
.c0 .video-react.video-react-4-3 {
  width: 100%;
  max-width: 100%;
  height: 0;
}

.c0 .video-react.video-react-16-9 {
  padding-top: 56.25%;
}

.c0 .video-react.video-react-4-3 {
  padding-top: 75%;
}

.c0 .video-react.video-react-fill {
  width: 100%;
  height: 100%;
}

.c0 .video-react .video-react-video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c0 .video-react.video-react-fullscreen {
  width: 100% !important;
  height: 100% !important;
  padding-top: 0 !important;
}

.c0 .video-react.video-react-fullscreen.video-react-user-inactive {
  cursor: none;
}

.c0 body.video-react-full-window {
  padding: 0;
  margin: 0;
  height: 100%;
  overflow-y: auto;
}

.c0 body.video-react-full-window .video-react-fullscreen {
  position: fixed;
  overflow: hidden;
  z-index: 1000;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

.c0 .video-react button {
  background: none;
  border: none;
  color: inherit;
  display: inline-block;
  cursor: pointer;
  overflow: visible;
  font-size: inherit;
  line-height: inherit;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: none;
  transition: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 .video-react .video-react-loading-spinner {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -25px 0 0 -25px;
  opacity: 0.85;
  text-align: left;
  border: 6px solid rgba(43,51,63,0.7);
  box-sizing: border-box;
  background-clip: padding-box;
  width: 50px;
  height: 50px;
  border-radius: 25px;
}

.c0 .video-react .video-react-loading-spinner:before,
.c0 .video-react .video-react-loading-spinner:after {
  content: "";
  position: absolute;
  margin: -6px;
  box-sizing: inherit;
  width: inherit;
  height: inherit;
  border-radius: inherit;
  opacity: 1;
  border: inherit;
  border-color: transparent;
  border-top-color: white;
  -webkit-animation: video-react-spinner-spin 1.1s cubic-bezier(0.6,0.2,0,0.8) infinite,video-react-spinner-fade 1.1s linear infinite;
  -webkit-animation: video-react-spinner-spin 1.1s cubic-bezier(0.6,0.2,0,0.8) infinite,video-react-spinner-fade 1.1s linear infinite;
  animation: video-react-spinner-spin 1.1s cubic-bezier(0.6,0.2,0,0.8) infinite,video-react-spinner-fade 1.1s linear infinite;
}

.c0 .video-react-seeking .video-react-loading-spinner,
.c0 .video-react-waiting .video-react-loading-spinner {
  display: block;
}

.c0 .video-react-seeking .video-react-loading-spinner:before,
.c0 .video-react-waiting .video-react-loading-spinner:before {
  border-top-color: white;
}

.c0 .video-react-seeking .video-react-loading-spinner:after,
.c0 .video-react-waiting .video-react-loading-spinner:after {
  border-top-color: white;
  -webkit-animation-delay: 0.44s;
  -webkit-animation-delay: 0.44s;
  animation-delay: 0.44s;
}

.c0 .video-react .video-react-big-play-button {
  font-size: 3em;
  line-height: 1.5em;
  height: 1.5em;
  width: 3em;
  display: block;
  position: absolute;
  top: 10px;
  left: 10px;
  padding: 0;
  cursor: pointer;
  opacity: 1;
  border: 0.06666em solid #fff;
  background-color: #2B333F;
  background-color: rgba(43,51,63,0.7);
  -webkit-border-radius: 0.3em;
  -moz-border-radius: 0.3em;
  border-radius: 0.3em;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  -o-transition: all 0.4s;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.c0 .video-react .video-react-big-play-button.video-react-big-play-button-center {
  top: 50%;
  left: 50%;
  margin-top: -0.75em;
  margin-left: -1.5em;
}

.c0 .video-react .video-react-big-play-button.big-play-button-hide {
  display: none;
}

.c0 .video-react:hover .video-react-big-play-button,
.c0 .video-react .video-react-big-play-button:focus {
  outline: 0;
  border-color: #fff;
  background-color: #73859f;
  background-color: rgba(115,133,159,0.5);
  -webkit-transition: all 0s;
  -moz-transition: all 0s;
  -o-transition: all 0s;
  -webkit-transition: all 0s;
  transition: all 0s;
}

.c0 .video-react-menu-button {
  cursor: pointer;
}

.c0 .video-react-menu-button.video-react-disabled {
  cursor: default;
}

.c0 .video-react-menu .video-react-menu-content {
  display: block;
  padding: 0;
  margin: 0;
  overflow: auto;
  font-family: serif,Times,"Times New Roman";
}

.c0 .video-react-menu li {
  list-style: none;
  margin: 0;
  padding: 0.2em 0;
  line-height: 1.4em;
  font-size: 1.2em;
  text-align: center;
}

.c0 .video-react-menu li:focus,
.c0 .video-react-menu li:hover {
  outline: 0;
  background-color: #73859f;
  background-color: rgba(115,133,159,0.5);
}

.c0 .video-react-menu li.video-react-selected,
.c0 .video-react-menu li.video-react-selected:focus,
.c0 .video-react-menu li.video-react-selected:hover {
  background-color: #fff;
  color: #2B333F;
}

.c0 .video-react-menu li.vjs-menu-title {
  text-align: center;
  text-transform: uppercase;
  font-size: 1em;
  line-height: 2em;
  padding: 0;
  margin: 0 0 0.3em 0;
  font-weight: bold;
  cursor: default;
}

.c0 .video-react-scrubbing .vjs-menu-button:hover .video-react-menu {
  display: none;
}

.c0 .video-react .video-react-menu-button-popup .video-react-menu {
  display: none;
  position: absolute;
  bottom: 0;
  width: 10em;
  left: -3em;
  height: 0em;
  margin-bottom: 1.5em;
  border-top-color: rgba(43,51,63,0.7);
}

.c0 .video-react .video-react-menu-button-popup .video-react-menu .video-react-menu-content {
  background-color: #2B333F;
  background-color: rgba(43,51,63,0.7);
  position: absolute;
  width: 100%;
  bottom: 1.5em;
  max-height: 15em;
}

.c0 .video-react-menu-button-popup .video-react-menu.video-react-lock-showing {
  display: block;
}

.c0 .video-react .video-react-menu-button-inline {
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  -o-transition: all 0.4s;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  overflow: hidden;
}

.c0 .video-react .video-react-menu-button-inline:before {
  width: 2.222222222em;
}

.c0 .video-react .video-react-menu-button-inline:hover,
.c0 .video-react .video-react-menu-button-inline:focus,
.c0 .video-react .video-react-menu-button-inline.video-react-slider-active {
  width: 12em;
}

.c0 .video-react .video-react-menu-button-inline:hover .video-react-menu,
.c0 .video-react .video-react-menu-button-inline:focus .video-react-menu,
.c0 .video-react .video-react-menu-button-inline.video-react-slider-active .video-react-menu {
  display: block;
  opacity: 1;
}

.c0 .video-react .video-react-menu-button-inline.video-react-slider-active {
  -webkit-transition: none;
  -moz-transition: none;
  -o-transition: none;
  -webkit-transition: none;
  transition: none;
}

.c0 .video-react .video-react-menu-button-inline .video-react-menu {
  opacity: 0;
  height: 100%;
  width: auto;
  position: absolute;
  left: 4em;
  top: 0;
  padding: 0;
  margin: 0;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  -o-transition: all 0.4s;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.c0 .video-react .video-react-menu-button-inline .video-react-menu-content {
  width: auto;
  height: 100%;
  margin: 0;
  overflow: hidden;
}

.c0 .video-react-no-flex .video-react-menu-button-inline .video-react-menu {
  display: block;
  opacity: 1;
  position: relative;
  width: auto;
}

.c0 .video-react-no-flex .video-react-menu-button-inline:hover,
.c0 .video-react-no-flex .video-react-menu-button-inline:focus,
.c0 .video-react-no-flex .video-react-menu-button-inline.video-react-slider-active {
  width: auto;
}

.c0 .video-react .video-react-poster {
  display: inline-block;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: contain;
  background-color: #000000;
  cursor: pointer;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
}

.c0 .video-react .video-react-poster img {
  display: block;
  vertical-align: middle;
  margin: 0 auto;
  max-height: 100%;
  padding: 0;
  width: 100%;
}

.c0 .video-react .video-react-slider {
  outline: 0;
  position: relative;
  cursor: pointer;
  padding: 0;
  margin: 0 0.45em 0 0.45em;
  background-color: #73859f;
  background-color: rgba(115,133,159,0.5);
}

.c0 .video-react .video-react-slider:focus {
  -webkit-box-shadow: 0 0 1em #fff;
  -moz-box-shadow: 0 0 1em #fff;
  box-shadow: 0 0 1em #fff;
}

.c0 .video-react .video-react-control {
  outline: none;
  position: relative;
  text-align: center;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 4em;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 .video-react .video-react-control:before {
  font-size: 1.8em;
  line-height: 1.67;
}

.c0 .video-react .video-react-control:focus:before,
.c0 .video-react .video-react-control:hover:before,
.c0 .video-react .video-react-control:focus {
  text-shadow: 0em 0em 1em #fff,0em 0em 0.5em #fff;
}

.c0 .video-react .video-react-control-text {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 .video-react-no-flex .video-react-control {
  display: table-cell;
  vertical-align: middle;
}

.c0 .video-react .video-react-control-bar {
  display: none;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 3em;
  background-color: #2B333F;
  background-color: rgba(43,51,63,0.7);
}

.c0 .video-react-has-started .video-react-control-bar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: visible;
  opacity: 1;
  -webkit-transition: visibility 0.1s,opacity 0.1s;
  -moz-transition: visibility 0.1s,opacity 0.1s;
  -o-transition: visibility 0.1s,opacity 0.1s;
  -webkit-transition: visibility 0.1s,opacity 0.1s;
  transition: visibility 0.1s,opacity 0.1s;
}

.c0 .video-react-has-started.video-react-user-inactive.video-react-playing .video-react-control-bar.video-react-control-bar-auto-hide {
  visibility: visible;
  opacity: 0;
  -webkit-transition: visibility 1s,opacity 1s;
  -moz-transition: visibility 1s,opacity 1s;
  -o-transition: visibility 1s,opacity 1s;
  -webkit-transition: visibility 1s,opacity 1s;
  transition: visibility 1s,opacity 1s;
}

.c0 .video-react-controls-disabled .video-react-control-bar,
.c0 .video-react-using-native-controls .video-react-control-bar,
.c0 .video-react-error .video-react-control-bar {
  display: none !important;
}

.c0 .video-react-audio.video-react-has-started.video-react-user-inactive.video-react-playing .video-react-control-bar {
  opacity: 1;
  visibility: visible;
}

.c0 .video-react-has-started.video-react-no-flex .video-react-control-bar {
  display: table;
}

.c0 .video-react .video-react-progress-control {
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  -webkit-flex: auto;
  -ms-flex: auto;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 4em;
}

.c0 .video-react-live .video-react-progress-control {
  display: none;
}

.c0 .video-react .video-react-progress-holder {
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  -webkit-flex: auto;
  -ms-flex: auto;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  -o-transition: all 0.2s;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  height: 0.3em;
}

.c0 .video-react .video-react-progress-control:hover .video-react-progress-holder {
  font-size: 1.6666666667em;
}

.c0 .video-react .video-react-progress-control:hover .video-react-time-tooltip,
.c0 .video-react .video-react-progress-control:hover .video-react-mouse-display:after,
.c0 .video-react .video-react-progress-control:hover .video-react-play-progress:after {
  visibility: visible;
  font-size: 0.6em;
}

.c0 .video-react .video-react-progress-holder .video-react-play-progress,
.c0 .video-react .video-react-progress-holder .video-react-load-progress,
.c0 .video-react .video-react-progress-holder .video-react-tooltip-progress-bar,
.c0 .video-react .video-react-progress-holder .video-react-load-progress div {
  position: absolute;
  display: block;
  height: 0.3em;
  margin: 0;
  padding: 0;
  width: 0;
  left: 0;
  top: 0;
}

.c0 .video-react .video-react-play-progress {
  background-color: #fff;
}

.c0 .video-react .video-react-play-progress:before {
  position: absolute;
  top: -0.3333333333em;
  right: -0.5em;
  font-size: 0.9em;
}

.c0 .video-react .video-react-time-tooltip,
.c0 .video-react .video-react-mouse-display:after,
.c0 .video-react .video-react-play-progress:after {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -3.4em;
  right: -1.9em;
  font-size: 0.9em;
  color: #000;
  content: attr(data-current-time);
  padding: 6px 8px 8px 8px;
  background-color: #fff;
  background-color: rgba(255,255,255,0.8);
  -webkit-border-radius: 0.3em;
  -moz-border-radius: 0.3em;
  border-radius: 0.3em;
}

.c0 .video-react .video-react-time-tooltip,
.c0 .video-react .video-react-play-progress:before,
.c0 .video-react .video-react-play-progress:after {
  z-index: 1;
}

.c0 .video-react .video-react-progress-control .video-react-keep-tooltips-inside:after {
  display: none;
}

.c0 .video-react .video-react-load-progress {
  background: #bfc7d3;
  background: rgba(115,133,159,0.5);
}

.c0 .video-react .video-react-load-progress div {
  background: white;
  background: rgba(115,133,159,0.75);
}

.c0 .video-react.video-react-no-flex .video-react-progress-control {
  width: auto;
}

.c0 .video-react .video-react-time-tooltip {
  display: inline-block;
  height: 2.4em;
  position: relative;
  float: right;
  right: -1.9em;
}

.c0 .video-react .video-react-tooltip-progress-bar {
  visibility: hidden;
}

.c0 .video-react .video-react-progress-control .video-react-mouse-display {
  display: none;
  position: absolute;
  width: 1px;
  height: 100%;
  background-color: #000;
  z-index: 1;
}

.c0 .video-react-no-flex .video-react-progress-control .video-react-mouse-display {
  z-index: 0;
}

.c0 .video-react .video-react-progress-control:hover .video-react-mouse-display {
  display: block;
}

.c0 .video-react.video-react-user-inactive .video-react-progress-control .video-react-mouse-display,
.c0 .video-react.video-react-user-inactive .video-react-progress-control .video-react-mouse-display:after {
  visibility: hidden;
  opacity: 0;
  -webkit-transition: visibility 1s,opacity 1s;
  -moz-transition: visibility 1s,opacity 1s;
  -o-transition: visibility 1s,opacity 1s;
  -webkit-transition: visibility 1s,opacity 1s;
  transition: visibility 1s,opacity 1s;
}

.c0 .video-react.video-react-user-inactive.video-react-no-flex .video-react-progress-control .video-react-mouse-display,
.c0 .video-react.video-react-user-inactive.video-react-no-flex .video-react-progress-control .video-react-mouse-display:after {
  display: none;
}

.c0 .video-react .video-react-mouse-display .video-react-time-tooltip,
.c0 .video-react .video-react-progress-control .video-react-mouse-display:after {
  color: #fff;
  background-color: #000;
  background-color: rgba(0,0,0,0.8);
}

.c0 .video-react .video-react-play-control {
  cursor: pointer;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 .video-react .video-react-fullscreen-control {
  cursor: pointer;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 .video-react.video-react-fullscreen {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  z-index: 9999;
}

.c0 .video-react .video-react-time-control {
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1em;
  line-height: 3em;
  min-width: 2em;
  width: auto;
  padding-left: 1em;
  padding-right: 1em;
}

.c0 .video-react .video-react-time-divider {
  line-height: 3em;
  min-width: initial;
  padding: 0;
}

.c0 .video-react .video-react-mute-control,
.c0 .video-react .video-react-volume-menu-button {
  cursor: pointer;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 .video-react .video-react-volume-control {
  width: 5em;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .video-react .video-react-volume-bar {
  margin: 1.35em 0.45em;
}

.c0 .video-react .video-react-volume-bar.video-react-slider-horizontal {
  width: 5em;
  height: 0.3em;
}

.c0 .video-react .video-react-volume-bar.video-react-slider-horizontal .video-react-volume-level {
  width: 100%;
}

.c0 .video-react .video-react-volume-bar.video-react-slider-vertical {
  width: 0.3em;
  height: 5em;
  margin: 1.35em auto;
}

.c0 .video-react .video-react-volume-bar.video-react-slider-vertical .video-react-volume-level {
  height: 100%;
}

.c0 .video-react .video-react-volume-level {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #fff;
}

.c0 .video-react .video-react-volume-level:before {
  position: absolute;
  font-size: 0.9em;
}

.c0 .video-react .video-react-slider-vertical .video-react-volume-level {
  width: 0.3em;
}

.c0 .video-react .video-react-slider-vertical .video-react-volume-level:before {
  top: -0.5em;
  left: -0.3em;
}

.c0 .video-react .video-react-slider-horizontal .video-react-volume-level {
  height: 0.3em;
}

.c0 .video-react .video-react-slider-horizontal .video-react-volume-level:before {
  top: -0.3em;
  right: -0.5em;
}

.c0 .video-react .video-react-menu-button-popup.video-react-volume-menu-button .video-react-menu {
  display: block;
  width: 0;
  height: 0;
  border-top-color: transparent;
}

.c0 .video-react .video-react-menu-button-popup.video-react-volume-menu-button-vertical .video-react-menu {
  left: 0.5em;
  height: 8em;
}

.c0 .video-react .video-react-menu-button-popup.video-react-volume-menu-button-horizontal .video-react-menu {
  left: -2em;
}

.c0 .video-react .video-react-menu-button-popup.video-react-volume-menu-button .video-react-menu-content {
  height: 0;
  width: 0;
  overflow-x: hidden;
  overflow-y: hidden;
}

.c0 .video-react .video-react-volume-menu-button-vertical:hover .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-vertical:focus .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-vertical.video-react-slider-active .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-vertical .video-react-lock-showing .video-react-menu-content {
  height: 8em;
  width: 2.9em;
}

.c0 .video-react .video-react-volume-menu-button-horizontal:hover .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-horizontal:focus .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-horizontal .video-react-slider-active .video-react-menu-content,
.c0 .video-react .video-react-volume-menu-button-horizontal .video-react-lock-showing .video-react-menu-content {
  height: 2.9em;
  width: 8em;
}

.c0 .video-react .video-react-volume-menu-button.video-react-menu-button-inline .video-react-menu-content {
  background-color: transparent !important;
}

.c0 .video-react .video-react-playback-rate .video-react-playback-rate-value {
  line-height: 3em;
  text-align: center;
}

.c0 .video-react .video-react-playback-rate .video-react-menu {
  width: 4em;
  left: 0em;
}

.c0 .video-react .video-react-bezel {
  position: absolute;
  left: 50%;
  top: 50%;
  width: 52px;
  height: 52px;
  z-index: 17;
  margin-left: -26px;
  margin-top: -26px;
  background: rgba(0,0,0,0.5);
  border-radius: 26px;
}

.c0 .video-react .video-react-bezel.video-react-bezel-animation {
  -moz-animation: video-react-bezel-fadeout 0.5s linear 1 normal forwards;
  -webkit-animation: video-react-bezel-fadeout 0.5s linear 1 normal forwards;
  -webkit-animation: video-react-bezel-fadeout 0.5s linear 1 normal forwards;
  animation: video-react-bezel-fadeout 0.5s linear 1 normal forwards;
  pointer-events: none;
}

.c0 .video-react .video-react-bezel.video-react-bezel-animation-alt {
  -moz-animation: video-react-bezel-fadeout-alt 0.5s linear 1 normal forwards;
  -webkit-animation: video-react-bezel-fadeout-alt 0.5s linear 1 normal forwards;
  -webkit-animation: video-react-bezel-fadeout-alt 0.5s linear 1 normal forwards;
  animation: video-react-bezel-fadeout-alt 0.5s linear 1 normal forwards;
  pointer-events: none;
}

.c0 .video-react .video-react-bezel .video-react-bezel-icon {
  width: 36px;
  height: 36px;
  margin: 8px;
  font-size: 26px;
  line-height: 36px;
  text-align: center;
}

.c0 .video-react .video-react-closed-caption {
  cursor: pointer;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 .video-react video::-webkit-media-text-track-container {
  -webkit-transform: translateY(-30px);
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

.c0 video {
  width: 100%;
}

.c0 div,
.c0 video {
  outline: none;
}

.c0 .video-react .video-react-big-play-button.video-react-big-play-button-center {
  border-radius: 50%;
  box-sizing: border-box;
  color: #ffffff;
  font-size: 32px;
  height: 64px;
  line-height: 60px;
  margin-left: -32px;
  margin-top: -32px;
  width: 64px;
}

.c0 .video-react.video-react-has-started.video-react-paused .video-react-big-play-button.big-play-button-hide {
  display: block;
}

<div
  style={
    Object {
      "maxWidth": "600px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="video-react-controls-enabled video-react-paused video-react-fluid video-react-user-active video-react-workinghover video-react"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="region"
      style={
        Object {
          "paddingTop": "56.25%",
        }
      }
      tabIndex="-1"
    >
      <video
        className="video-react-video"
        muted={false}
        onAbort={[Function]}
        onCanPlay={[Function]}
        onCanPlayThrough={[Function]}
        onDurationChange={[Function]}
        onEmptied={[Function]}
        onEnded={[Function]}
        onError={[Function]}
        onLoadStart={[Function]}
        onLoadedData={[Function]}
        onLoadedMetadata={[Function]}
        onPause={[Function]}
        onPlay={[Function]}
        onPlaying={[Function]}
        onProgress={[Function]}
        onRateChange={[Function]}
        onSeeked={[Function]}
        onSeeking={[Function]}
        onStalled={[Function]}
        onSuspend={[Function]}
        onTimeUpdate={[Function]}
        onVolumeChange={[Function]}
        onWaiting={[Function]}
        playsInline={true}
        poster="/static/witcher_60fps_thumb.jpg"
        preload="metadata"
        tabIndex="-1"
      />
      <div
        className="video-react-poster"
        onClick={[Function]}
        style={
          Object {
            "backgroundImage": "url(\\"/static/witcher_60fps_thumb.jpg\\")",
          }
        }
      />
      <div
        className="video-react-loading-spinner"
      />
      <button
        aria-live="polite"
        className="video-react-big-play-button video-react-big-play-button-center big-play-button-hide"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="video-react-control-text"
        >
          Play Video
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section default 1`] = `
Array [
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c2 span {
  display: inline-block;
}

.c3 {
  color: #000;
}

@media (max-width:734px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c2 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c2 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c2 span {
    max-width: 640px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2>
          <span>
            Some heading.
          </span>
        </h2>
      </div>
      <p
        className="c3"
      >
        Some paragraph.
      </p>
    </div>
  </div>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c2 span {
  display: inline-block;
}

.c3 {
  color: #000;
}

@media (max-width:734px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c2 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c2 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c2 span {
    max-width: 640px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2>
          <span>
            Another heading.
          </span>
        </h2>
      </div>
      <p
        className="c3"
      >
        Another paragraph.
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Section intro 1`] = `
.c2 {
  padding-bottom: 64px;
  padding-left: 32px;
  padding-right: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c3 h1,
.c3 h2,
.c3 h3,
.c3 h4,
.c3 h5,
.c3 h6 {
  color: #da1e28;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c3 span {
  display: inline-block;
}

.c4 {
  color: #000;
}

@media (max-width:734px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575px) {
  .c3 h1,
  .c3 h2,
  .c3 h3,
  .c3 h4,
  .c3 h5,
  .c3 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c3 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c3 h1,
  .c3 h2,
  .c3 h3,
  .c3 h4,
  .c3 h5,
  .c3 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c3 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c3 span {
    max-width: 640px;
  }
}

@media (max-width:399px) {
  .c4 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c4 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c4 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c4 {
    max-width: 720px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2>
          <span>
            4K 60FPS + HDR
            <br />
            videos are the future.
          </span>
        </h2>
      </div>
      <p
        className="c4"
      >
        Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section rows 1`] = `
.c2 {
  width: 100%;
}

.c2:nth-last-child(n + 2) {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c5 h1,
.c5 h2,
.c5 h3,
.c5 h4,
.c5 h5,
.c5 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c6 {
  color: #ffffff;
}

.c4 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c4 > img {
  vertical-align: bottom;
}

.c4 > p {
  font-weight: bold;
}

.c3 {
  background-color: #13171A;
  width: 100%;
}

@media (max-width:734px) {
  .c2 {
    display: block;
  }
}

@media (min-width:735px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:734px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:399px) {
  .c5 h1,
  .c5 h2,
  .c5 h3,
  .c5 h4,
  .c5 h5,
  .c5 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c5 h1,
  .c5 h2,
  .c5 h3,
  .c5 h4,
  .c5 h5,
  .c5 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c6 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c6 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c6 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c6 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt=""
          src="/static/god_of_war_compare_hdr_on.jpg?v=1"
          style={
            Object {
              "verticalAlign": "bottom",
              "width": "100%",
            }
          }
        />
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h3>
              Capture HDR gameplay videos
            </h3>
          </div>
          <p
            className="c6"
          >
            With RecordRig, you gain the ability to capture the darkest blacks, the brightest whites, and the full HDR (High Dynamic Range) color spectrum of the original game.
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt=""
          src="/static/god_of_war_compare_hdr_off.jpg?v=1"
          style={
            Object {
              "verticalAlign": "bottom",
              "width": "100%",
            }
          }
        />
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h3>
              Capture HDR gameplay videos
            </h3>
          </div>
          <p
            className="c6"
          >
            With RecordRig, you gain the ability to capture the darkest blacks, the brightest whites, and the full HDR (High Dynamic Range) color spectrum of the original game.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section subsections 1`] = `
.c2 {
  width: 100%;
}

.c2:nth-last-child(n + 2) {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c6 h1,
.c6 h2,
.c6 h3,
.c6 h4,
.c6 h5,
.c6 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c9 {
  color: #000;
}

.c7 {
  color: #ffffff;
}

.c5 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c5 > img {
  vertical-align: bottom;
}

.c5 > p {
  font-weight: bold;
}

.c4 {
  background-color: #13171A;
  width: 100%;
}

.c8 {
  background-color: #f2f4f8;
  width: 100%;
}

@media (max-width:734px) {
  .c3 {
    display: block;
    width: 100%;
  }

  .c3:nth-child(odd) {
    margin-bottom: 16px;
  }
}

@media (min-width:735px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 50%;
  }

  .c3:nth-child(odd) {
    margin-right: 8px;
  }

  .c3:nth-child(even) {
    margin-left: 8px;
  }
}

@media (max-width:734px) {
  .c2 {
    display: block;
  }
}

@media (min-width:735px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:734px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:399px) {
  .c6 h1,
  .c6 h2,
  .c6 h3,
  .c6 h4,
  .c6 h5,
  .c6 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c6 h1,
  .c6 h2,
  .c6 h3,
  .c6 h4,
  .c6 h5,
  .c6 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c9 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c9 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c9 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c9 {
    max-width: 720px;
  }
}

@media (max-width:399px) {
  .c7 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c7 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c7 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c7 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c5 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_black.jpg?v=1"
            style={
              Object {
                "verticalAlign": "bottom",
                "width": "100%",
              }
            }
          />
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h3>
                Darkest blacks
              </h3>
            </div>
            <p
              className="c7"
            >
              Capture the full atmosphere of the darkest scenes without losing any visibility.
            </p>
          </div>
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="c8"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_white.jpg?v=1"
            style={
              Object {
                "verticalAlign": "bottom",
                "width": "100%",
              }
            }
          />
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h3>
                Brightest whites
              </h3>
            </div>
            <p
              className="c9"
            >
              Vibrant, alive scenes are a given when capturing in HDR.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShoppingBag 0 items 1`] = `
<div
  className=""
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots ShoppingBag 1 item 1`] = `
.c0 {
  border-bottom: 2px solid #eee;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <p>
      RecordRig - Stealth Black
    </p>
    <p>
      + 2TB HDD
    </p>
    <p>
      1
    </p>
  </div>
  <div
    className=""
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className=""
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag 2 item 1`] = `
.c0 {
  border-bottom: 2px solid #eee;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <p>
      RecordRig - Pristine White
    </p>
    
    <p>
      1
    </p>
  </div>
  <div
    className=""
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className=""
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag Default 1`] = `
<div
  className=""
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots Text capsheading 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h3>
    Capture HDR gameplay videos
  </h3>
</div>
`;

exports[`Storyshots Text capsheading custom color 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h3>
    Capture HDR gameplay videos
  </h3>
</div>
`;

exports[`Storyshots Text capsheading custom selector 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h4>
    Capture HDR gameplay videos
  </h4>
</div>
`;

exports[`Storyshots Text default 1`] = `
.c0 {
  color: #000;
}

@media (max-width:399px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<span
  className="c0"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</span>
`;

exports[`Storyshots Text heading 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      Cinematic 4K HDR
      <br />
      video example.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading centered 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: center;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 96%;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 span {
    max-width: 80%;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      Record your gameplay in the highest quality.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading custom color 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #408bfc;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      4K 60FPS + HDR
      <br />
      videos are the future.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading custom selector 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h1>
    <span>
      RecordRig technical specifications.
    </span>
  </h1>
</div>
`;

exports[`Storyshots Text paragraph 1`] = `
.c0 {
  color: #000;
}

@media (max-width:399px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<p
  className="c0"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</p>
`;

exports[`Storyshots Text paragraph custom color 1`] = `
.c0 {
  color: #d5d9e0;
}

@media (max-width:399px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <p
    className="c0"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </p>
</div>
`;

exports[`Storyshots Text text custom color 1`] = `
.c0 {
  color: #d5d9e0;
}

@media (max-width:399px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <span
    className="c0"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </span>
</div>
`;

exports[`Storyshots Tile bottom image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #24a148;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Record 4K HDR on Xbox One
        </h3>
      </div>
      <p
        className="c3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/controller-xbox.png"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile custom colors 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #408bfc;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <img
        alt=""
        src="/static/icon-record-blue-large.png"
        style={
          Object {
            "height": "58px",
            "marginBottom": "20px",
            "width": "58px",
          }
        }
      />
      <div
        className="c2"
      >
        <h3>
          Record with the click of a button
        </h3>
      </div>
      <p
        className="c3"
      >
        RECentral comes pre-installed and pre-configured, ready to start recording.Spend less time configuring and getting to know your tool, and more time doing what you do best: gaming.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile default 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #000;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  width: 100%;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Pay later or pay in parts
        </h3>
      </div>
      <p
        className="c3"
      >
        If you're located in Austria, Denmark, Finland, Germany, the Netherlands, Norway, Sweden or the United Kingdom you can use Klarna to place your order now and Pay Later, after you've received your RecordRig. Or, Slice It: pay in equal parts over a larger period of time, completely interest-free, only starting payments after having received your RecordRig.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile link 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #009c98;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #f2f4f8;
  border-bottom: 8px solid #009c98;
  color: inherit;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <a
    className="c0"
    href="/tech-specs"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Technical specifications
        </h3>
      </div>
      <span
        style={
          Object {
            "display": "block",
            "fontSize": "48px",
            "lineHeight": "56px",
            "margin": "64px 0",
          }
        }
      >
        Get the full list of what's included with RecordRig.
      </span>
      <span
        style={
          Object {
            "color": "#009c98",
            "display": "block",
            "fontSize": "18px",
            "textAlign": "right",
          }
        }
      >
        Learn more
      </span>
    </div>
  </a>
</div>
`;

exports[`Storyshots Tile top image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #000;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #f2f4f8;
  width: 100%;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/4k_hdr_god_of_war_white.jpg"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Brightest whites
        </h3>
      </div>
      <p
        className="c3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile wide panel with contained image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #408bfc;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "992px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Record with confidence using RECentral
        </h3>
      </div>
      <p
        className="c3"
      >
        Maecenas nec neque facilisis, aliquet sem sed, placerat lorem. Donec quis mauris risus. Quisque sodales diam ut elementum ultricies. Pellentesque laoreet commodo mauris, ut condimentum nisi cursus eget. In scelerisque at elit vitae dictum.
      </p>
      <div
        style={
          Object {
            "padding": "48px 0",
            "textAlign": "center",
          }
        }
      >
        <img
          alt=""
          src="/static/4k_hdr_streaming_capturing_software.png"
          style={
            Object {
              "maxWidth": "100%",
              "verticalAlign": "bottom",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
